feat: GitHub Pages deployment setup with Actions
- Add dynamic base path configuration for GitHub Pages
- Create postbuild script for SPA routing support
- Set up GitHub Actions workflow for automatic deployment
- Add repository automation script
- Update README with comprehensive deployment guide
- Expand Interactive Learning Tools with comprehensive content
- Support both project pages and custom domains

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "postbuild": "node scripts/postbuild.cjs",
     "build:analyze": "vite build --mode analyze",
     "build:production": "NODE_ENV=production vite build",
     "lint": "eslint . --ext js,jsx,ts,tsx --report-unused-disable-directives --max-warnings 0 --fix",
