--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,57 +2,47 @@ name: Deploy to GitHub Pages
 
 on:
   push:
-    branches: ['main']
-  pull_request:
-    branches: ['main']
-
-  # Allows you to run this workflow manually from the Actions tab
+    branches: [ main ]
   workflow_dispatch:
 
-# Sets the GITHUB_TOKEN permissions to allow deployment to GitHub Pages
 permissions:
   contents: read
   pages: write
   id-token: write
 
-# Allow one concurrent deployment
 concurrency:
-  group: 'pages'
+  group: "pages"
   cancel-in-progress: true
 
 jobs:
-  # Build job
   build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-        
-      - name: Setup Node.js
+
+      - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
-          
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v2
-        with:
-          version: 8
-          
+          node-version: 20
+          cache: 'npm'
+
       - name: Install dependencies
-        run: pnpm install --frozen-lockfile
-        
-      - name: Build website
-        run: pnpm build
-        
-      - name: Setup Pages
-        uses: actions/configure-pages@v4
-        
-      - name: Upload artifact
+        run: |
+          npm ci || npm i
+
+      - name: Build
+        env:
+          VITE_BASE: ${{ secrets.VITE_BASE }}
+        run: |
+          npm run build
+          npm run postbuild
+
+      - name: Upload Pages artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: './dist'
+          path: dist
 
-  # Deploy job
   deploy:
     environment:
       name: github-pages
