--- a/package.json
+++ b/package.json
@@ -7,7 +7,13 @@
   "author": "Retrosynthesis Team",
   "license": "MIT",
   "homepage": "https://Yassine92-cyber.github.io/organic-chemistry-explorer/",
-  "keywords": ["chemistry", "retrosynthesis", "molecules", "rdkit", "organic-chemistry"],
+  "keywords": [
+    "chemistry",
+    "retrosynthesis",
+    "molecules",
+    "rdkit",
+    "organic-chemistry"
+  ],
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -33,25 +39,25 @@
     "postinstall": "husky install"
   },
   "dependencies": {
-    "@rdkit/rdkit": "^2025.3.4-1.0.0",
+    "@hookform/resolvers": "^3.3.2",
     "@radix-ui/react-collapsible": "^1.0.3",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-tabs": "^1.0.4",
-    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@rdkit/rdkit": "^2025.3.4-1.0.0",
     "clsx": "^2.0.0",
+    "framer-motion": "^10.16.4",
     "lucide-react": "^0.294.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.1",
     "react-error-boundary": "^4.0.11",
-    "tailwind-merge": "^2.0.0",
-    "framer-motion": "^10.16.4",
-    "zustand": "^4.4.4",
     "react-hook-form": "^7.47.0",
-    "@hookform/resolvers": "^3.3.2",
-    "zod": "^3.22.4"
+    "react-router-dom": "^6.8.1",
+    "tailwind-merge": "^2.0.0",
+    "zod": "^3.22.4",
+    "zustand": "^4.4.4"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.1.4",
@@ -79,6 +85,7 @@
     "postcss": "^8.4.27",
     "prettier": "^3.0.3",
     "tailwindcss": "^3.3.3",
+    "terser": "^5.43.1",
     "typescript": "^5.2.2",
     "vite": "^4.4.5",
     "vite-bundle-analyzer": "^0.7.0",
